RESOLVED FIXED175230
Fix typo in testmasm.cpp: ENABLE(JSVALUE64) should be USE(JSVALUE64).
https://bugs.webkit.org/show_bug.cgi?id=175230
Summary Fix typo in testmasm.cpp: ENABLE(JSVALUE64) should be USE(JSVALUE64).
Mark Lam
Reported 2017-08-04 17:17:45 PDT
Patch coming.
Attachments
proposed patch. (2.58 KB, patch)
2017-08-04 17:35 PDT, Mark Lam
saam: review+
Radar WebKit Bug Importer
Comment 1 2017-08-04 17:18:24 PDT
Mark Lam
Comment 2 2017-08-04 17:35:50 PDT
Created attachment 317318 [details] proposed patch. Let's try this on the EWS.
Mark Lam
Comment 3 2017-08-04 17:44:04 PDT
Comment on attachment 317318 [details] proposed patch. This patch has passed for 32-bit and 64-bit on my local builds. Time for a review.
Mark Lam
Comment 4 2017-08-04 18:01:58 PDT
Thanks for the review. Landed in r220308: <http://trac.webkit.org/r220308>.
Note You need to log in before you can comment on or make changes to this bug.