Fix typo in testmasm.cpp: ENABLE(JSVALUE64) should be USE(JSVALUE64). https://bugs.webkit.org/show_bug.cgi?id=175230 <rdar://problem/33735857>

Reviewed by Saam Barati.

* assembler/testmasm.cpp:
(JSC::testProbeReadsArgumentRegisters):
(JSC::testProbeWritesArgumentRegisters):



Canonical link: https://commits.webkit.org/191964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220308 268f45cc-cd09-0410-ab3c-d52691b4dbfc